--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,9 @@ footer {
 }
 
 .footer-image {
-    width: 2535px;
-    height: 666px;
+    display: block;
+    width: auto;
+    height: auto;
+    max-height: 100%;
     margin: 0;
 }
