--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ header {
 }
 
 .logo {
-    width: 889px;
-    height: 377px;
+    width: 40%;
+    height: auto;
     margin-right: 20px;
 }
 
@@ -48,6 +48,6 @@ footer {
     display: block;
     width: auto;
     height: auto;
-    max-height: 100%;
+    max-height: 50%;
     margin: 0;
 }
